--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/styled-engine-sc": "^5.10.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.2",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
